# res_pv_backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/res_pv_backend/: data_query.py  data_upload.py  data_upload_30min.py  utils.py
src/res_pv_backend/data_insert/: data_insert.py
src/res_pv_backend/data_query/: solaredge.py  solcast.py  utils.py
src/res_pv_backend/db_query/: db_query.py
